src/styles/globals.css
/* font */
@import url("https://fonts.googleapis.com/css2?family=Bellefair&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    *::before,
    *::after {
        border-width: 0;
    }
    html {
        overflow-x: hidden;
        overflow-y: auto;
        -webkit-text-size-adjust: none; /* for iOS Safari */
        text-size-adjust: none; /* for other mobile browsers */
        background-color: black;
    }

    html:focus-within {
        scroll-behavior: smooth;
    }

    body {
        --path: "home";
        min-height: 100vh;
        max-width: 100%;
        overflow-x: clip;
        overflow-y: auto;
        text-rendering: optimizeSpeed;
        font-weight: 500;
        @apply font-barlow text-lg;
        background-color: black;
        word-wrap: break-word;
        background-position: bottom;
        background-repeat: no-repeat;
        background-size: cover;
    }

    /* @media screen and (min-width: 768px) {
        body {
            background-image: url("/image/home/background-home-tablet.jpg");
        }
    }

    @media screen and (min-width: 1280px) {
        body {
            background-image: url("/image/home/background-home-desktop.jpg");
        }
    } */

    body > #__next {
        width: 100%;
        min-height: 100vh;
        display: grid;
        grid-template-rows: min-content 1fr;
        position: relative;
        row-gap: 1rem;
    }

    @media screen and (min-width: 768px) {
        body > #__next {
            row-gap: 1.5rem;
        }
    }

    @media screen and (min-width: 1280px) {
        body > #__next {
            row-gap: 4.75rem;
        }
    }

    /* Add pointer cursors to interactive elements  */
    label:not([disabled]),
    button:not([disabled]),
    select:not([disabled]),
    summary:not([disabled]),
    [type="radio"]:not([disabled]),
    [type="submit"]:not([disabled]),
    [type="checkbox"]:not([disabled]) {
        cursor: pointer;
    }

    [disabled] {
        cursor: not-allowed;
    }

    /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
    @media (prefers-reduced-motion: reduce) {
        html:focus-within {
            scroll-behavior: auto;
        }

        *,
        *::before,
        *::after {
            animation-duration: 0.01ms !important;
            animation-iteration-count: 1 !important;
            transition-duration: 0.01ms !important;
            scroll-behavior: auto !important;
        }
    }

    /* custom scrollbar */

    /* body {
        scrollbar-gutter: stable both-edges;
    } */

    ::-webkit-scrollbar {
        min-width: 100%;
    }

    ::-webkit-scrollbar-track {
        @apply bg-primary/25 backdrop-blur-sm;
    }

    ::-webkit-scrollbar-thumb {
        @apply bg-accent;
        border-radius: 100px;
    }
}

@layer components {
    /* nav button */
    .mobile-nav-toggle {
        overflow: hidden;
        stroke-linecap: round;
        stroke-width: 6;
    }
    .mobile-nav-toggle > svg {
        position: absolute;
        bottom: -25%;
        stroke: hsl(0, 0%, 100%);
        fill: none;
        width: 150%;
        height: 150%;
        transition: transform 1s cubic-bezier(0.03, 0.5, 0.02, 0.03),
            rotate 1s cubic-bezier(0.03, 0.23, 0.62, 1);
    }
    .mobile-nav-toggle > svg > path {
        transition: 1s;
        stroke-dasharray: 60 31 60 300;
    }
    .mobile-nav-toggle[aria-expanded="true"] > svg {
        rotate: 0.125turn;
    }
    .mobile-nav-toggle[aria-expanded="true"] > svg > path {
        stroke-dasharray: 60 105 60 300;
        stroke-dashoffset: -90;
        transform: translate(2px, -10px);
    }
    .mobile-nav-toggle:focus-visible {
        outline: 5px solid hsl(231deg, 77%, 90%);
        outline-offset: 5px;
    }

    /* 
glow effect by Aaron Iker https://dribbble.com/shots/17674758-Button-Glow
as described by Kevin Powell https://codepen.io/kevinpowell/pen/rNrdzdx
*/
    .glow-effect {
        /* --glow-line-color: #efeac3; */
        /* --glow-line-thickness: 2px; */
        /* --glow-line-length: 20px; */
        /* --glow-blur-color: #333fff; */
        /* --glow-blur-size: 5px; */
        /* --glow-offset: 0px; */
        /* --animation-speed: 1200ms; */
        /* do not change, used for calculations */
        --container-offset: 100px;
        --outline-offset: -48px;

        position: relative;
        display: block;
        /* position: absolute;
  inset: 0; */
    }
    .glow-effect:is(:hover, :focus) {
        outline-offset: var(--outline-offset);
    }

    .glow-container {
        display: block;
        pointer-events: none;
        position: absolute;
        inset: calc(var(--container-offset) / -2);
        width: calc(100% + var(--container-offset));
        height: calc(100% + var(--container-offset));
        opacity: 0;
        outline: none;
    }

    .glow-blur,
    .glow-line {
        display: block;
        width: calc(100% - var(--container-offset) + var(--glow-offset));
        height: calc(100% - var(--container-offset) + var(--glow-offset));
        x: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
        y: calc((var(--container-offset) / 2) + calc(var(--glow-offset) / -2));
        /* rx: 1.25rem; */
        fill: transparent;
        stroke-linecap: round;
        stroke-width: 5px;
        stroke-dasharray: var(--glow-line-length)
            calc(50px - var(--glow-line-length));
    }

    .glow-effect > *:is(:hover, :focus) ~ * > :is(.glow-line, .glow-blur) {
        stroke-dashoffset: calc(var(--travel) * var(--glow-line-length));
        transition: stroke-dashoffset var(--animation-speed) ease-in;
        outline: none;
    }

    .glow-line {
        stroke-width: var(--glow-line-thickness);
    }

    .glow-blur {
        filter: blur(var(--glow-blur-size));
        stroke-width: var(--glow-blur-size);
    }
    .glow-effect > *:is(:hover, :focus) {
        outline-offset: 4px;
    }

    .glow-effect > *:is(:hover, :focus) ~ .glow-container {
        outline: none;
        border: none;
        animation: glow-visibility cubic-bezier(0.42, 1.03, 0.76, 0.4)
            var(--animation-speed);
        opacity: var(--final-opacity);
    }

    @keyframes glow-visibility {
        0% {
            opacity: 0;
        }
        25%,
        75% {
            opacity: 1;
        }
        100% {
            opacity: var(--final-opacity);
        }
    }

    .glow-effect[data-glow-animation="false"] {
        --glow-line-length: 50px;
    }
    .glow-effect[data-glow-offset="true"] {
        --glow-offset: 10px;
    }

    .glow-effect[data-glow-animation="grow"]
        > *:is(:hover, :focus)
        ~ .glow-container {
        scale: 1.3;
        transition: scale var(--animation-speed) linear;
    }
}

@layer utilities {
    .mask-1 {
        mask-size: 800%;
        -webkit-mask-size: 800%;
        mask: linear-gradient(
            to left,
            transparent 40%,
            black 50%,
            black 60%,
            transparent 80%
        );
        -webkit-mask: linear-gradient(
            to left,
            transparent 40%,
            black 50%,
            black 60%,
            transparent 80%
        );
    }

    /* Typography */

    h1 {
        @apply font-bellefair text-[clamp(5rem,7vw+1rem,9.375rem)] uppercase leading-tight md:text-7xl;
    }

    h2 {
        @apply font-bellefair text-4xl leading-tight md:text-5xl  xl:text-6xl;
    }
    h3 {
        @apply font-bellefair text-[1.5rem] md:text-3xl  xl:text-4xl;
    }
    h4 {
        @apply font-bellefair text-[1.25rem] md:text-2xl;
    }
    h5 {
        @apply font-condensed text-base uppercase tracking-widest md:text-[1.25rem] xl:text-xl;
    }
    h6 {
        @apply font-bellefair text-xl;
    }
    .h7 {
        @apply font-condensed text-xs tracking-wide;
    }
    nav {
        @apply font-condensed text-base tracking-wider;
    }
    p {
        @apply text-sm md:text-base lg:text-lg;
        line-height: 1.75em;
    }

    .text-shadow {
        text-shadow: -1px 1px 1px hsla(0, 0%, 100%, 0.5),
            1px -1px 1px hsla(0, 0%, 0%, 0.5);
    }

    .round-mask {
        mask: radial-gradient(transparent 65%, black 85%);
    }
    .linear-mask {
        mask: linear-gradient(to left, transparent 50%, black 80%);
    }

    /* Spicy */
    @supports ((background-clip: text) or (-webkit-background-clip: text)) and
        ((color: transparent) or (-webkit-text-fill-color: transparent)) {
        .spicy {
            margin: 0;
            text-shadow: -1px 1px 2px hsla(0, 0%, 100%, 0.1),
                1px -1px 2px hsla(0, 0%, 0%, 0.1);

            color: transparent !important;
            -webkit-text-fill-color: transparent !important;
            background-clip: text;
            -webkit-background-clip: text;

            @apply animate-bg-slide;
        }

        @supports (
            -webkit-box-reflect: below -0.65em
                linear-gradient(transparent 52%, #fff)
        ) {
            .spicy {
                -webkit-box-reflect: below -0.65em linear-gradient(transparent
                            52%, #fff);
            }
        }
    }
}

